fixed slight spacing in gallery, formatted form layout, fix responsiveness issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -554,25 +554,25 @@ p {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  gap: 2rem;
   height: 50%;
 }
 .section-exercises .gallery-row-1 {
   width: 49%;
   position: relative;
+  margin-bottom: -1.5rem;
 }
 .section-exercises .gallery-row-2 {
   width: 32%;
   position: relative;
 }
 .section-exercises .gallery-image {
+  display: inline-block;
   width: 100%;
   height: 40rem;
   -o-object-fit: cover;
      object-fit: cover;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 .section-exercises .gallery-header {
   position: absolute;
@@ -587,7 +587,7 @@ p {
   height: 20%;
   -webkit-box-shadow: inset 0px -3rem 3rem black;
           box-shadow: inset 0px -3rem 3rem black;
-  border-bottom: 0.5rem solid #ffd600;
+  border-bottom: 0.3rem solid #ffd600;
 }
 
 .section-join-us {
@@ -608,6 +608,7 @@ p {
 }
 .section-join-us .form-label__text-area {
   display: block;
+  margin-bottom: 1rem;
 }
 .section-join-us .form-input {
   background-color: #9e9da6;
