--- a/styles/sass/layouts/_exercises.scss
+++ b/styles/sass/layouts/_exercises.scss
@@ -7,12 +7,13 @@
         .gallery {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            gap: 2rem;
             height: 50%;
 
             &-row-1 {
                 width: 49%;
                 position: relative;
+                margin-bottom: -1.5rem; // Fixed slight spacing issue in gallery between rows
             }
             &-row-2 {
                 width: 32%;
@@ -20,10 +21,11 @@
             }
 
             &-image {
+                display: inline-block;
                 width: 100%;
                 height: 40rem;
                 object-fit: cover;
-                margin-bottom: 2rem;
+                margin-bottom: 1.5rem;
             }
 
             &-header {
@@ -39,7 +41,7 @@
                 width: 100%;
                 height: 20%;
                 box-shadow: inset 0px -3rem 3rem black;
-                border-bottom: 0.5rem solid $color-secondary;
+                border-bottom: 0.3rem solid $color-secondary;
             }
         }
     }
