--- a/styles/sass/layouts/_join-us.scss
+++ b/styles/sass/layouts/_join-us.scss
@@ -19,6 +19,7 @@
 
                 &__text-area {
                     display: block;
+                    margin-bottom: 1rem;
                 }
             }
 
